testdata/bad/timeWithHourZone.ion
// Timezone missing minutes
1969-02-23T07:00+07
